# sshkeeper

./: .gitignore  Cargo.toml  README.md
.claude/skills/openspec-apply-change/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.github/workflows/: ci.yml  release.yml
_docs/: description.md
openspec/changes/archive/2026-04-13-add-quick-actions/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-13-file-transfer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-13-home-dir-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-13-init-rust-project/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-13-setup-key-auth/: design.md  proposal.md  tasks.md
openspec/specs/connection-editor/: spec.md
openspec/specs/connection-list/: spec.md
openspec/specs/connection-model/: spec.md
openspec/specs/file-transfer/: spec.md
openspec/specs/key-auth-setup/: spec.md
openspec/specs/quick-actions/: spec.md
openspec/specs/ssh-backend/: spec.md
openspec/specs/ssh-config-import/: spec.md
openspec/specs/toml-storage/: spec.md
openspec/specs/tui-shell/: spec.md
openspec/specs/tunnel-manager-ui/: spec.md
src/: main.rs
src/model/: connection.rs  mod.rs  store.rs  tunnel.rs
src/ssh/: actions.rs  key_setup.rs  mod.rs  system.rs  transfer.rs  tunnel.rs
src/storage/: import.rs  mod.rs  toml_storage.rs  transfer_history.rs
src/ui/: app.rs  browse.rs  detail.rs  editor.rs  file_tree.rs  mod.rs  quick_actions.rs  remote_file_tree.rs  theme.rs  transfer.rs  tunnels.rs
(+14 files in other folders)
