[package]
name = "sshkeeper"
version = "0.1.0"
edition = "2024"
description = "A cross-platform TUI for managing SSH connections"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ssh2-config = "0.4"
dirs = "6"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tui-input = "0.11"
